<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".contrato.contratoLuz.ActivityContratoLuz">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondo_dgv">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:gravity="center"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="40dp"
            tools:layout_editor_absoluteY="16dp">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="182dp"
                android:layout_height="111dp"
                app:srcCompat="@drawable/logo_escalax34" />

            <TextView
                android:id="@+id/lblDatosContrato"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_margin="10dp"
                android:background="@drawable/fondorelleno"
                android:ems="10"
                android:gravity="center"
                android:text="@string/lblDatosCLiente"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtTitularCLIContrato"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_margin="10dp"
                android:background="@drawable/fondo_edittext"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hinttxtTitular"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/txtApellidosCLIContrato"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_margin="10dp"
                android:background="@drawable/fondo_edittext"
                android:gravity="center"
                android:hint="@string/hinttxtApellidos"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/txtDNICLIContrato"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_margin="10dp"
                android:background="@drawable/fondo_edittext"
                android:gravity="center"
                android:hint="@string/hinttxtDNI"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/txtTelefono1CLIContrato"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_margin="10dp"
                android:background="@drawable/fondo_edittext"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hinttxtTelefono"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/txtTelefono2CLIContrato"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_margin="10dp"
                android:background="@drawable/fondo_edittext"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hinttxtTelefono2"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/txtEmailCLIContrato"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_margin="10dp"
                android:background="@drawable/fondo_edittext"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hinttxtEmail"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/txtDireccionCLIContrato"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_margin="10dp"
                android:background="@drawable/fondo_edittext"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hinttxtDireccion"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/txtNumeroCLIContrato"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_margin="10dp"
                android:background="@drawable/fondo_edittext"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hinttxtNumero"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/txtPisoCLIContrato"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_margin="10dp"
                android:background="@drawable/fondo_edittext"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hinttxtPiso"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/txtPuertaCLIContrato"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_margin="10dp"
                android:background="@drawable/fondo_edittext"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hinttxtPuerta"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/txtLocalidadCLIContrato"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_margin="10dp"
                android:background="@drawable/fondo_edittext"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hinttxtLocalidad"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/txtProvinciaCLIContrato"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_margin="10dp"
                android:background="@drawable/fondo_edittext"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hinttxtProvincia"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/txtCPCLIContrato"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_margin="10dp"
                android:background="@drawable/fondo_edittext"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hinttxtCP"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/txtRepresentanteCLIContrato"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_margin="10dp"
                android:background="@drawable/fondo_edittext"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hinttxtRepresentante"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/txtNIFRepresentanteCLIContrato"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_margin="10dp"
                android:background="@drawable/fondo_edittext"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hinttxtNIFRepresentante"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/chkRecordarDatosClienteLuz"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="@string/chkRecordarDatosCliente" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnAnteriorContratoLuz1"
                    android:layout_width="132dp"
                    android:layout_height="55dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/boton_naranja"
                    android:gravity="center"
                    android:text="@string/btnAnteriorClienteContrato"
                    android:textColor="@color/white" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSiguienteContratoLuz1"
                    android:layout_width="129dp"
                    android:layout_height="53dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/boton_naranja"
                    android:gravity="center"
                    android:text="@string/btnSiguienteClienteContrato"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>