<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".contrato.ActivityContratoLuzSuministro">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondo_dgv">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:gravity="center"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="40dp"
            tools:layout_editor_absoluteY="16dp">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="182dp"
                android:layout_height="111dp"
                app:srcCompat="@drawable/logo_escalax34" />

            <TextView
                android:id="@+id/lblDatosSuministro"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_margin="10dp"
                android:background="@drawable/fondorelleno"
                android:ems="10"
                android:gravity="center"
                android:text="@string/lblDatosSuministro"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20sp" />



            <EditText
                android:id="@+id/txtDireccionSUMIContrato"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_margin="10dp"
                android:background="@drawable/fondo_edittext"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hinttxtDireccionSumi"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/txtNumeroSUMIContrato"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_margin="10dp"
                android:background="@drawable/fondo_edittext"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hinttxtNumeroSumi"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/txtPisoSUMIContrato"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_margin="10dp"
                android:background="@drawable/fondo_edittext"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hinttxtPisoSumi"
                android:inputType="textPersonName"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"/>

            <EditText
                android:id="@+id/txtPuertaSUMIContrato"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_margin="10dp"
                android:background="@drawable/fondo_edittext"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hinttxtPuertaSumi"
                android:inputType="textPersonName"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"/>

            <EditText
                android:id="@+id/txtLocalidadSUMIContrato"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_margin="10dp"
                android:background="@drawable/fondo_edittext"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hinttxtLocalidadSumi"
                android:inputType="textPersonName"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"/>

            <EditText
                android:id="@+id/txtProvinciaSUMIContrato"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_margin="10dp"
                android:background="@drawable/fondo_edittext"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hinttxtProvinciaSumi"
                android:inputType="textPersonName"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"/>

            <EditText
                android:id="@+id/txtCPSUMIContrato"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_margin="10dp"
                android:background="@drawable/fondo_edittext"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hinttxtCPSSUMIContrato"
                android:inputType="textPersonName"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"/>

            <EditText
                android:id="@+id/txtDistribuidoraSUMIContrato"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_margin="10dp"
                android:background="@drawable/fondo_edittext"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hinttxtDistribuidoraSumi"
                android:inputType="textPersonName"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"/>


            <EditText
                android:id="@+id/txtCNAESUMIContrato"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_margin="10dp"
                android:background="@drawable/fondo_edittext"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hinttxtCNAESumi"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnBuscaConsumo"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_margin="10dp"
                android:background="@drawable/boton_naranja"
                android:gravity="center"
                android:text="@string/btnBuscaConsumo"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/txtCUPSSUMIContrato"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_margin="10dp"
                android:background="@drawable/fondo_edittext"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hinttxtCUPSSumi"
                android:inputType="textPersonName"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"/>

            <EditText
                android:id="@+id/txtConsumoSUMIContrato"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_margin="10dp"
                android:background="@drawable/fondo_edittext"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hinttxtConsumoSumi"
                android:inputType="numberDecimal"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp" />


            <CheckBox
                android:id="@+id/chkRecordarDatosSuministroLuz"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="@string/chkRecordarDatosClienteLuz" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnAnteriorContratoLuz2"
                    android:layout_width="132dp"
                    android:layout_height="55dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/boton_naranja"
                    android:gravity="center"
                    android:text="@string/btnAnteriorSuministroContrato"
                    android:textColor="@color/white" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSiguienteContratoLuz2"
                    android:layout_width="129dp"
                    android:layout_height="53dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/boton_naranja"
                    android:gravity="center"
                    android:text="@string/btnSiguienteSuministroContrato"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>