<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sips.ActivitySips">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/pngwing3_com">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="243dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgLogoSips"
                    android:layout_width="201dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/logo_escalax34" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="362dp"
                android:layout_gravity="center"
                android:orientation="vertical">>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSipsLuz"
                    android:layout_width="223dp"
                    android:layout_height="85dp"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:background="@drawable/boton_naranja"
                    android:gravity="center"
                    android:text="@string/btnSIPSLuz" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSipsGas"
                    android:layout_width="223dp"
                    android:layout_height="85dp"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:background="@drawable/boton_verde_presionado"
                    android:gravity="center"
                    android:text="@string/btnSIPSGas" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSipsAtras"
                    android:layout_width="223dp"
                    android:layout_height="85dp"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:background="@drawable/buttons_md"
                    android:gravity="center"
                    android:text="@string/btnSIPSAtras" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>